--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <h1>Dit is mijn eerste Website project.</h1>l
 <table border="0" style="width:800px">
 <tr>
-  <td>Page 1</td>
-  <td>Page 2</td>		
+  <td>Page 1 href="#" </td>
+  <a href="#">
+    <div style="height:100%;width:100%">
+      Page 2
+    </div>
+  </a>		
   <td>Page 3</td>
   </tr>
 </table></table>
